Fixed cursor positioning error my changing z-index

--- a/src/Contact-Me/Profile.css
+++ b/src/Contact-Me/Profile.css
@@ -12,6 +12,7 @@
 
 .profile-left-container {
     position: relative;
+    z-index: 1;
     flex-direction: column;
     color: white;
     align-items: center;
