--- a/src/Cursor/Cursor.css
+++ b/src/Cursor/Cursor.css
@@ -8,6 +8,7 @@ a {
 
 .cursor {
     position: fixed;
+    z-index: 10;
     width: 20px;
     height: 20px;
     border-radius: 50%;
